# Monolith

./: CMakeLists.txt  README.md  gen.py  syscalls.h  syscalls.json  syscalls.s
include/monolith/: monolith.h
include/monolith/preprocessor/: pp.h
src/: entry.asm
tests/: CMakeLists.txt  test.c
